Day 13 – Complete troubleshooting guide